<resources>
    <string name="app_name">Lista de Compras App</string>
    <string name="btnLoginText">Entrar</string>
    <string name="btnNovoText">CADASTRAR</string>
    <string name="editLoginHint">Digite seu usuário.</string>
    <string name="editSenhaHint">Digite sua senha.</string>
    <string name="btnCadastro">CADASTRAR</string>
    <string name="editNomeUsuarioHint">Digite seu nome.</string>
    <string name="editLoginUsuarioHint">Digite seu e-mail.</string>
    <string name="editSenha1Hint">Digite sua senha.</string>
    <string name="editSenha2Hint">Repita a senha.</string>
    <string name="btnLogoutText">Sair</string>
</resources>
